Fix projectile keymap binding back to `C-c p`

--- a/emacs-config.org
+++ b/emacs-config.org
@@ -275,6 +275,7 @@ Avoid loading old bytecode instead of newer source.
         :ensure t
         :pin melpa-stable
         :diminish projectile-mode
+        :bind-keymap ("C-c p" . projectile-command-map)
         :init
         (setq projectile-require-project-root nil
               projectile-completion-system 'ivy)
