--- a/emacs-config.org
+++ b/emacs-config.org
@@ -691,31 +691,7 @@ Avoid loading old bytecode instead of newer source.
 
    I really don't understand why text editors don't have line numbers enabled by default... Let's turn them and relative numbers on:
    #+BEGIN_SRC emacs-lisp
-     ;; https://stackoverflow.com/a/6928112
-     (defvar my/linum-format-string "%3d")
-
-     (add-hook 'linum-before-numbering-hook 'my/linum-get-format-string)
-
-     (defun my/linum-get-format-string ()
-       (let* ((width (1+ (length (number-to-string
-                                  (count-lines (point-min) (point-max))))))
-              (format (concat "%" (number-to-string width) "d")))
-         (setq my/linum-format-string format)))
-
-     (defvar my/linum-current-line-number (line-number-at-pos))
-
-     (setq linum-format 'my/linum-relative-line-numbers)
-
-     (defun my/linum-relative-line-numbers (line-number)
-       (let ((offset (abs (- line-number my/linum-current-line-number))))
-         (propertize (format my/linum-format-string offset) 'face 'linum)))
-
-     (defadvice linum-update (around my-linum-update)
-       (let ((my/linum-current-line-number (line-number-at-pos)))
-         ad-do-it))
-     (ad-activate 'linum-update)
-
-     (global-linum-mode +1)
+     (setq-default display-line-numbers 'relative)
    #+END_SRC
 
    Rainbow parenthesis are really nice to have, assuming it doesn't slow down your editor. They basically make it easy to spot matching parenthesis/braces/brackets.
