--- a/emacs-config.org
+++ b/emacs-config.org
@@ -429,7 +429,7 @@ Avoid loading old bytecode instead of newer source.
         :hook (go-mode . lsp-go-enable))
     #+END_SRC
 *** JavaScript
-    The LSP client for JavaScript/TypeScript needs to be intlled via npm before you can use it: =npm install -g javascript-typescript-langserver=.
+    The LSP client for JavaScript/TypeScript needs to be installed via npm before you can use it: =npm install -g javascript-typescript-langserver=.
     #+BEGIN_SRC emacs-lisp
       (use-package js2-mode
         :mode ("\\.js\\'"
