--- a/emacs-config.org
+++ b/emacs-config.org
@@ -666,7 +666,7 @@ Avoid loading old bytecode instead of newer source.
    Match the titlebar color on macOS
    #+BEGIN_SRC emacs-lisp
      (add-to-list 'default-frame-alist '(ns-transparent-titlebar . t))
-     (add-to-list 'default-frame-alist '(ns-appearande . dark))
+     (add-to-list 'default-frame-alist '(ns-appearance . dark))
      (setq ns-use-proxy-icon nil
            frame-title-format nil)
    #+END_SRC
